--- a/AgileTeamTools.Ui/Pages/_Host.cshtml
+++ b/AgileTeamTools.Ui/Pages/_Host.cshtml
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="AgileTeamTools.Ui.styles.css" rel="stylesheet" />
+    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
@@ -31,5 +32,6 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
 </body>
 </html>
