--- a/AgileTeamTools.Ui/Pages/_Host.cshtml
+++ b/AgileTeamTools.Ui/Pages/_Host.cshtml
@@ -10,8 +10,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AgileTeamTools.Ui</title>
-    <base href="~/" />
+    <title>Agile Team Tools</title>
+    <base href="~/" /> 
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="AgileTeamTools.Ui.styles.css" rel="stylesheet" />
