Updating so the estimate from a single person is only shown once

--- a/AgileTeamTools.Ui/Pages/Estimate.razor
+++ b/AgileTeamTools.Ui/Pages/Estimate.razor
@@ -34,7 +34,7 @@
     <br/>
     <div class="mat-layout-grid">
         <div class="mat-layout-grid-inner">
-            @foreach (var message in Estimates)
+            @foreach (var message in Estimates.Values)
             {
                 <div class="mat-layout-grid-cell mat-layout-grid-cell-span-3">
                     <MatPaper Elevation="10" Rounded="true" Outlined="true" Style="text-align: center">
