Updating name textbox to be less specific to the user

--- a/AgileTeamTools.Ui/Pages/Estimate.razor
+++ b/AgileTeamTools.Ui/Pages/Estimate.razor
@@ -2,7 +2,7 @@
 <MatHeadline2>Team Estimator</MatHeadline2>
 <MatSubtitle1>A way for teams to estimate work in a virtual environment</MatSubtitle1>
 
-<MatTextField @bind-Value="UserName" Label="User Name" FullWidth="true" />
+<MatTextField @bind-Value="UserName" Label="Name" FullWidth="true" />
 <br />
 <MatSubtitle1>Choose Your Estimate</MatSubtitle1>
 
