--- a/AgileTeamTools.Ui/Pages/LeanCoffee.razor
+++ b/AgileTeamTools.Ui/Pages/LeanCoffee.razor
@@ -8,8 +8,40 @@
 <MatButton Outlined="true" OnClick="StopTimer" Icon="@MatIconNames.Stop" Disabled="@(!IsTimerRunning || !CanManageTimer)">Stop</MatButton>&nbsp;
 <MatButton Dense="true" OnClick="ResetTimer" Icon="@MatIconNames.Refresh" Disabled="@(IsTimerRunning || !CanManageTimer)">Reset</MatButton>
 
-<br/>
-<MatDivider/>
-<br/>
+<br />
+<MatDivider />
+<br />
 
 <MatHeadline1>@Elapsed</MatHeadline1>
+<br />
+<MatDivider />
+<br />
+<MatSubtitle1>Choose Your Action</MatSubtitle1>
+<MatButton Icon="@MatIconNames.Thumb_up" OnClick="@(args=>SetAction("Yes"))" Outlined="@(SelectedAction == "Yes")" />&nbsp;
+<MatButton Icon="@MatIconNames.Thumb_down" OnClick="@(args=>SetAction("No"))" Outlined="@(SelectedAction == "No")" />&nbsp;
+<MatButton Icon="@MatIconNames.Thumbs_up_down" OnClick="@(args=>SetAction("Maybe"))" Outlined="@(SelectedAction == "Maybe")" />&nbsp;
+<br />
+<br />
+<MatDivider />
+<br />
+<MatButton Outlined="true" OnClick="ShowResponses" Icon="@MatIconNames.Account_circle">Show</MatButton>&nbsp;
+<MatButton Outlined="true" OnClick="HideResponses" Icon="@MatIconNames.Highlight_off">Hide</MatButton>&nbsp;
+
+@if (AreActionsVisible)
+{
+    <MatHeadline4>Team Responses</MatHeadline4>
+    <br />
+    <div class="mat-layout-grid">
+        <div class="mat-layout-grid-inner">
+            @foreach (var item in GetActionSummary())
+            {
+                <div class="mat-layout-grid-cell mat-layout-grid-cell-span-4">
+                    <MatPaper Elevation="10" Rounded="true" Outlined="true" Style="text-align: center">
+                        <MatHeadline3>@item.Key</MatHeadline3>
+                        <MatSubtitle1>@item.Value</MatSubtitle1>
+                    </MatPaper>
+                </div>
+            }
+        </div>
+    </div>
+}
