Adding MudBlazor to UI

--- a/AgileTeamTools.Blazor.Ui/_Imports.razor
+++ b/AgileTeamTools.Blazor.Ui/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using AgileTeamTools.Blazor.Ui
 @using AgileTeamTools.Blazor.Ui.Shared
+
+@using BlazorApplicationInsights;
+@using MudBlazor
