--- a/AgileTeamTools.Blazor.Ui/App.razor
+++ b/AgileTeamTools.Blazor.Ui/App.razor
@@ -1,4 +1,4 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
@@ -10,3 +10,20 @@
         </LayoutView>
     </NotFound>
 </Router>
+
+<MudThemeProvider Theme="Theme" />
+<MudDialogProvider 
+    CloseButton="true"
+    Position="DialogPosition.Center"
+    />
+<MudSnackbarProvider />
+
+<ApplicationInsightsComponent />
+
+
+@code
+{
+
+    public MudTheme Theme = new Themes.EnterpriseTheme();
+
+}
