--- a/AgileTeamTools.Blazor.Ui/Shared/NavMenu.razor
+++ b/AgileTeamTools.Blazor.Ui/Shared/NavMenu.razor
@@ -1,34 +1,14 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">AgileTeamTools.Blazor.Ui</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-</div>
+﻿@using AgileTeamTools.Blazor.Ui.Pages
+ 
+<MudNavMenu>
+    <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Main</MudText>
+    <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Outlined.Dashboard">Dashboard</MudNavLink>
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="chat">
-                <span class="oi oi-plus" aria-hidden="true"></span> Chat
-            </NavLink>
-        </div>
-    </nav>
-</div>
-
-@code {
-    private bool collapseNavMenu = true;
-
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
+    @if(IsLoading)
     {
-        collapseNavMenu = !collapseNavMenu;
+        <MudSkeleton Animation="Animation.Wave" Width="100%" Height="20px" />
     }
-}
+
+    <MudNavLink Href="estimate" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Outlined.Numbers">Estimate</MudNavLink>
+    <MudNavLink Href="leancoffee" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Outlined.MeetingRoom">Lean Coffee</MudNavLink>
+</MudNavMenu>
