Centralizing paths and their knowledge

--- a/AgileTeamTools.Blazor.Ui/Pages/Index.razor
+++ b/AgileTeamTools.Blazor.Ui/Pages/Index.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@page "/{TeamId?}"
 
 <MudContainer Class="mt-16">
     <MudText Typo="Typo.h3" Align="Align.Center" GutterBottom="true">Agile Team Tools</MudText>
