--- a/AgileTeamTools.Blazor.Ui/Shared/NavMenu.razor
+++ b/AgileTeamTools.Blazor.Ui/Shared/NavMenu.razor
@@ -1,14 +1,15 @@
-﻿@using AgileTeamTools.Blazor.Ui.Pages
+﻿@using AgileTeamTools.Blazor.Ui.Models
+@using AgileTeamTools.Blazor.Ui.Pages
  
 <MudNavMenu>
     <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Main</MudText>
-    <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Outlined.Dashboard">Dashboard</MudNavLink>
+    <MudNavLink Href="@Paths.Dashboard(TeamId)" Match="NavLinkMatch.All" Icon="@Icons.Material.Outlined.Dashboard">Dashboard</MudNavLink>
 
     @if(IsLoading)
     {
         <MudSkeleton Animation="Animation.Wave" Width="100%" Height="20px" />
     }
 
-    <MudNavLink Href="estimate" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Outlined.Numbers">Estimate</MudNavLink>
-    <MudNavLink Href="leancoffee" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Outlined.MeetingRoom">Lean Coffee</MudNavLink>
+    <MudNavLink Href="@Paths.Estimate(TeamId)" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Outlined.Numbers">Estimate</MudNavLink>
+    <MudNavLink Href="@Paths.LeanCoffee(TeamId)" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Outlined.MeetingRoom">Lean Coffee</MudNavLink>
 </MudNavMenu>
