--- a/AgileTeamTools.Blazor.Ui/Pages/Estimate.razor
+++ b/AgileTeamTools.Blazor.Ui/Pages/Estimate.razor
@@ -57,18 +57,24 @@
                     </MudButton>
                     <MudDivider/>
                 </MudItem>
-                <MudItem>
+                <MudItem xs="12" md="12">
                     @if (AreMessagesVisible)
                     {
-                        @foreach (var item in Estimates)
-                        {
-                            <MudPaper Class="pa-16 ma-2" 
-                                Outlined="true"
-                                Style="text-align: center">
-                                <MudText Typo="Typo.h3">@item.Value.Body</MudText>
-                                <MudText Typo="Typo.subtitle1">@item.Value.UserName</MudText>
-                            </MudPaper>
-                        }
+                        <MudGrid>
+                            @foreach (var item in Estimates)
+                            {
+                                <MudItem xs="6" md="3">
+                                    <MudPaper Class="pa-16 ma-2" 
+                                        Outlined="true"
+                                        Style="text-align: center">
+                                        <MudText Typo="Typo.h3">@item.Value.Body</MudText>
+                                        <MudText Typo="Typo.subtitle2">@item.Value.UserName</MudText>
+                                    </MudPaper>
+                                </MudItem>
+                                
+                            }
+                        </MudGrid>
+                        
                     }
                 </MudItem>
             </MudGrid>
