Renaming to match page purpos

--- a/AgileTeamTools.Blazor.Ui/Pages/LeanCoffee.razor
+++ b/AgileTeamTools.Blazor.Ui/Pages/LeanCoffee.razor
@@ -59,7 +59,7 @@
                     @if (AreMessagesVisible)
                     {
                         <MudGrid>
-                            @foreach (var item in Estimates)
+                            @foreach (var item in Results)
                             {
                                 <MudItem xs="6" md="3">
                                     <MudPaper Class="pa-16 ma-2" 
