--- a/AgileTeamTools.Blazor.Ui/Pages/Estimate.razor
+++ b/AgileTeamTools.Blazor.Ui/Pages/Estimate.razor
@@ -6,7 +6,7 @@
     <MudCard>
         <MudCardHeader>
             <CardHeaderContent>
-                <MudText Typo="Typo.subtitle1">Team Estimates</MudText>
+                <MudText Typo="Typo.h4">Team Estimates</MudText>
             </CardHeaderContent>
         </MudCardHeader>
         <MudCardContent>
