Removing timer component

--- a/AgileTeamTools.Blazor.Ui/Pages/Index.razor
+++ b/AgileTeamTools.Blazor.Ui/Pages/Index.razor
@@ -50,8 +50,8 @@
                         <MudListItem Icon="@Icons.Material.Filled.VerifiedUser">
                             Live Feedback
                         </MudListItem>
-                        <MudListItem Icon="@Icons.Material.Filled.Timer">
-                            Shared Timer
+                        <MudListItem Icon="@Icons.Material.Filled.SupervisedUserCircle">
+                            Shared Understanding
                         </MudListItem>
                     </MudList>
                 </MudCardContent>
